# jemma

./: .current_chat.txt  .gitignore  .jemma-config.toml  README.md  config.ini  pyproject.toml  test.py
gemini_code/: main.py
gemini_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
jemma/: agentic_response.py  config.py  explainCodebase.py  fileSpitter.py  inference.py  init.py  initialization.py  main.py  message_enum.py  modelInteraction.py  response_enums.py  startSession.py  terminalPrettifier.py
jemma.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
jemma/UI/: display.py  textbox.py
jemma/__pycache__/: startSession.py
jemma/agent/: loop.py  main.py
jemma/classes/: agentic_response.py
jemma/exceptions/: file_operation_exceptions.py  tool_call_exceptions.py
jemma/main/inference/: main.py
jemma/model/: commandWatch.py  editCode.py  explainCodebase.py  modelInteraction.py  startSession.py
jemma/services/: tool_service.py
jemma/tools/: registry.py
jemma/tools/file_operations/: read_file.py  write_to_file.py
jemma/tools/search_tools/: grep_search.py
jemma/utils/: commandWatch.py  fileSpitter.py  getFilesContent.py  terminalPrettifier.py
jemma/validators/: file_operations_validators.py  tool_call_validators.py
tests/: test_tools.py
