[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-code"
version = "0.1.0"
description = "Like Claude Code, but its free"
authors = [{name = "Alabi Ayobami", email = "arocket04@gmail.com"}]
requires-python = ">=3.6"
dependencies = [
    "requests>=2.25.0"
]
keywords = ["code", "code assistant", "gemini", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.scripts]
gemini-code = "gemini_code.main:main"
gemini-configure = "gemini_code.config:configure_api_key"

[tool.setuptools]
packages = ["gemini_code"]